sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value PlusPetit
		if(PlusPetit(position+1,position-1)){
                   ^